<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/l_Margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/r_Margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/notesField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="80dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/t_Margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <TextView
        android:id="@+id/activityNotesTextViewJobtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextViewJobtitle"
        app:layout_constraintStart_toStartOf="@+id/l_Margin"
        app:layout_constraintTop_toTopOf="@+id/t_Margin" />

    <TextView
        android:id="@+id/activityNotesTextViewCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/TextViewCompany"
        app:layout_constraintStart_toStartOf="@+id/l_Margin"
        app:layout_constraintTop_toBottomOf="@+id/activityNotesTextViewJobtitle" />

    <TextView
        android:id="@+id/activityNotesTextViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextViewScore"
        app:layout_constraintStart_toStartOf="@+id/l_Margin"
        app:layout_constraintTop_toTopOf="@+id/companyInfo" />

    <SeekBar
        android:id="@+id/activityNotesSeek"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/r_Margin"
        app:layout_constraintStart_toStartOf="@+id/l_Margin"
        app:layout_constraintTop_toBottomOf="@+id/activityNotesTextViewScore" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/companyInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="128dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/coolnessScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="184dp" />

    <CheckBox
        android:id="@+id/activityNotesCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/activityNotesCheckBox"
        app:layout_constraintEnd_toStartOf="@+id/r_Margin"
        app:layout_constraintStart_toStartOf="@+id/l_Margin"
        app:layout_constraintTop_toTopOf="@+id/coolnessScore" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/TextViewNotes"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/notesField"
        app:layout_constraintEnd_toStartOf="@+id/r_Margin"
        app:layout_constraintStart_toStartOf="@+id/l_Margin"
        app:layout_constraintTop_toTopOf="@+id/appliedCheckbox" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/appliedCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="232dp" />

    <Button
        android:id="@+id/activityNotesTextViewCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toTopOf="@+id/b_Margin"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/l_Margin" />

    <Button
        android:id="@+id/activityNotesTextViewOKBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toTopOf="@+id/b_Margin"
        app:layout_constraintEnd_toStartOf="@+id/r_Margin"
        app:layout_constraintStart_toStartOf="@+id/guideline22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/b_Margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5060827" />
</androidx.constraintlayout.widget.ConstraintLayout>